Made changes in portfolio pdf and website

--- a/index.html
+++ b/index.html
@@ -135,17 +135,18 @@
         <div class="project-description">
           <h2>NaZIA Blog</h2>
           <p>
-            This application I built is a blog style web application where different users can write different 
-            posts and share their views on various subjects. These posts can be blog posts or twitter updates.
-             I choose this project, so that People can get information like Awareness of Environment issues 
-             or any other issues related to education, health, digital technology by the help of this Website.
-             Any User can share any information related to any topic to all Users.  
-            I have used mainly Python and Django framework. Django is a popular python framework that gives 
-            us a lot of functionalities right out of the box and makes it really enjoyable to work with 
-            web applications.
-             Bootstrap4 and HTML are also used to build this web application.
- 
-          </p>
+            I used Microsoft visual studio code editor, Django framework and bootstrap for development. Django is a popular python framework that gives
+            us a lot of functionalities right out of the box and makes it really enjoyable to work with web applications.
+            I hosted the application on Heroku platform in order to make the application available on the internet and amazon s3 bucket to 
+            store my media files.
+            I hope to improve this application by adding features like commenting and likes. </p>
+           
+            <p> Application: <strong><a href="http://naziaawsomeblog.herokuapp.com/">Visit NaZIA Blog.com!</a></strong> </p>
+            <p>
+              Technology: Amazon s3, GitHub, Heroku, VScode. </p> 
+              <p>
+              Programming Language and framework: Python, Django, bootstrap.
+             </p>  
         </div>
       </div>
 
@@ -153,12 +154,14 @@
         <div class="project-description has-margin-right">
           <h2>Online Admission Form</h2>
           <p>
-            The project is all about making use of computers for the admission of the people in a course rather than doing it manually. 
-            This system provides the way to get admission easily and efficiently. 
-            In short, it reduces the paper work and also keeps the records of information of the students safe.
-            HTML, CSS, BOOTSTRAP, JavaScript were used to build this Website. 
-
-          </p>
+            A web-based application form to register for a class (Front-End). The project is all about making use of computer for the
+            admission of the students rather than doing it manually. This system provides the way to get admission easily and efficiently.
+             In short, it reduces the paper work and also keeps the record of information. 
+           </p>
+           <p>
+            Technology: HTML, CSS, JavaScript. 
+           </p>   
+           <p>Application: <a href="https://nazianusrat.github.io/online-application-form/">Visit the WebSite</a> (just Front-End). </p>   
         </div>
         <div class="project-img">
           <img src="images/online.jpg" />
@@ -172,10 +175,9 @@
         <div class="project-description">
           <h2>Online Marketing </h2>
           <p>
-            In the Internet age many new methods used for product promotion and marketing. Keep that in mind this Online Marketing website has been build
-            where customers can look for any kind of traditional dress through online. Customers can book appoinment through email.
-            HTML, CSS, BOOTSTRAP, JavaScript were used to build this Website. 
-          </p>
+            In the Internet age many new methods used for product promotion and marketing. Keep that in mind this Online Marketing 
+            website has been built where customers can look for any kind of traditional dress through online.
+          </p> <p> Technology: HTML, CSS, Bootstrap, JavaScript </p>
         </div>
       </div>
       <hr />
