--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
       <div class="title-heading-1">
         <h2>My Education</h2>
         <p>University of Bremen,
-          April 2020 - Present
+          October 2021 - Present
         <p>
-        <p>M.Sc. in Communication and Information Technology (CIT)
+        <p>M.Sc. in Digital Media
         <p>
         </p>
         <p id="bsc">American International University-Bangladesh (AIUB),
